--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,6 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: 'CodeAnalysisLogs'
-    artifact: 'scan.sarif'
+    targetPath: 'scanreport.sarif'
+    artifact: 'CodeAnalysisLogs'
     publishLocation: 'pipeline'
